--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-0": {
-            "Monolog": "src"
+        "psr-4": {
+            "Wpextend\\": "inc/classes/"
         }
     }
 }
