--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
     "name": "wpextend/wpextend",
+    "description": "Extends basic Wordpress features such as add general settings, easy creating custom post type, ...",
+    "version": "2.0.2",
     "type": "wordpress-plugin",
-    "description": "Extend basics Wordpress features like general settings, easy custom post type creation, ...",
-    "keywords": ["wordpress", "plugin", "wpextend"],
+    "keywords": ["wordpress", "plugin", "wpextend", "general settings", "custom post type"],
     "homepage": "https://github.com/PaulBalanche/WPextend/",
-    "license": "MIT",
+    "license": "proprietary",
     "authors": [
         {
             "name": "Paul Balanche",
@@ -13,8 +14,11 @@
             "role": "Developer"
         }
     ],
+    "support": {
+        "email": "paul.balanche@gmail.com"
+    },
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=7.0.0"
     },
     "autoload": {
         "psr-4": {
