--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     },
     "require": {
         "php": ">=7.0.0",
-        "wpextend/package": "^1.0"
+        "wpextend/package": "^1.0",
+        "jenssegers/blade": "^1.4"
     },
     "autoload": {
         "psr-4": {
